<?xml version="1.0" encoding="UTF-8"?>
<project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://maven.apache.org/POM/4.0.0"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <groupId>org.pixielib</groupId>
    <artifactId>main</artifactId>
    <packaging>pom</packaging>
    <version>1.0-SNAPSHOT</version>
    <name>main</name>
    <url>http://maven.apache.org</url>
    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <maven.compiler.source>19</maven.compiler.source>
        <maven.compiler.target>19</maven.compiler.target>
    </properties>

    <modules>
        <module>bencode</module>
        <module>ui</module>
        <module>util</module>
        <module>io</module>
        <module>xml</module>
        <module>apps</module>
        <module>webapps</module>
        <module>content</module>
        <module>games</module>
        <module>pixievm</module>
        <module>pixieweb</module>
    </modules>

</project>